# real-desert-player

./: CMakeLists.txt  LICENSE
src/: const.h  main.cpp  resources.qrc
src/app/: application.cpp  application.h  playback.h
src/player/: player.cpp  player.h
src/player/qml/: player.qml
